fix: MHeader的z-index问题及slider错位问题

--- a/src/common/css/booking.css
+++ b/src/common/css/booking.css
@@ -1,6 +1,7 @@
 .booking {
   position: fixed;
   bottom: 0;
+  z-index: 2;
 }
 
 .slider-wrapper {
